--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-    <script src="4.Hoisting_Scoping.js"></script>
+    <script src="1.Intro.js"></script>
 </head>
 <h1 style="text-align:center">The JavaScript</h1>
 <body>
