--- a/Index.html
+++ b/Index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-<<<<<<< HEAD
     <script defer src="6.Basic_DOM.js"></script>
-=======
-    <script src="1.Intro.js"></script>
->>>>>>> 346426ba1f1977f0abb4b733910ebc10d3d56666
+    <!-- <script src="1.Intro.js"></script> -->
 </head>
 <h1 style="text-align:center">The JavaScript</h1>
 <body>
-    
+    <div id="div-id">This is an id element</div>
+    <div class="div-class">This is a class element</div>
+    <div class="div-class">This is a class element</div>
+    <div class="div-class">This is a class element</div>
+    <div class="div-class">This is a class element</div>
+    <div data-test>This is a data attributes</div>
+    <input type="text">
 </body>
 </html>
